--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -2,6 +2,9 @@
     outline: 1px solid red;
 
 }*/
+
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
+
 :root{
     /*primary*/
     --BrightBlue: hsl(220, 98%, 61%);
@@ -41,7 +44,7 @@
     transition: all 0.5s ease-out;
 }
 body{
-    
+    font-family: 'Josefin Sans', sans-serif;
     height: 100vh;/*change*/
     background-color: var(--VeryLightGray);
     transition: all 0.5s ease-out;
